CRUD tác giả / diễn viên